# docs/openapi.json
@@ -739,6 +739,11 @@
       },
       "SocialLoginRequest" : {
         "properties" : {
+          "displayName" : {
+            "maxLength" : 50,
+            "minLength" : 0,
+            "type" : "string"
+          },
           "token" : {
             "minLength" : 1,
             "type" : "string"
